# platonica

./: .env.example  .gitignore  DECISIONS.md  NOT_YET.md  PRODUCT_PRINCIPLES.md  README.md  V1_SCOPE.md  pyproject.toml
accounts/: models.py
accounts/migrations/: 0001_initial.py
accounts/tests/: test_models.py
config/: settings.py  test_settings.py  urls.py
docs/: architecture.md
organizations/: access.py  admin.py  models.py
organizations/migrations/: 0001_initial.py
organizations/tests/: test_access.py  test_models.py
